# cue

./: .coveragerc  .gitignore  .gitreview  .testr.conf  AUTHORS  ChangeLog  README.md  Vagrantfile  env_setup.sh  openstack-common.conf  requirements.txt  setup.cfg  test-requirements.txt  tox.ini  vagrant_config.rb.sample
contrib/devstack/: README.rst  install.sh  local.conf  local.sh
contrib/devstack/extras.d/: 60-zookeeper.sh  70-cue.sh  80-cue-rally-config.sh  80-rally.sh
contrib/devstack/lib/: cue  dib  rally  zookeeper
contrib/devstack_old/: README.rst  install.sh  local.conf
contrib/devstack_old/lib/: cue  dib
contrib/image-elements/: README.md  image-build-rabbitmq.sh
contrib/image-elements/cue-rabbitmq-base/: README.md  element-deps  (+1 more)
contrib/vagrant/: Vagrantfile  local.conf  vagrant_config.rb  vagrant_config.rb.sample
contrib/zookeeper/: Vagrantfile  install.sh
cue/: __init__.py  client.py  version.py
cue/api/: __init__.py  acl.py  app.py  app.wsgi  config.py  hooks.py
cue/clients/: __init__.py
cue/cmd/: __init__.py  api.py  manage.py  monitor.py  worker.py
cue/common/: __init__.py  config.py  context.py  exception.py  i18n.py  policy.py  service.py  utils.py  validate_auth_token.py
cue/db/: api.py  base.py  models.py
cue/manage/: base.py  broker.py  database.py  taskflow.py
cue/monitor/: __init__.py  monitor_service.py
cue/objects/: Cluster.py  Endpoint.py  Node.py  __init__.py  base.py  broker.py  brokerMetadata.py  broker_metadata.py  cluster.py  endpoint.py  node.py  utils.py
cue/taskflow/: __init__.py  client.py  consumer.py  monitor.py  producer.py  service.py
cue/templates/: cloud_config.tmpl  install_rabbit.sh.tmpl
cue/tests/: base.py  fixture.py  utils.py
devstack/: local.conf  local.sh  plugin.sh  settings
doc/source/: conf.py  configuration.rst  devguide.rst  getting-involved.rst  getting-started.rst  howtos.rst  index.rst  install.rst  rest.rst  what.rst  why.rst
etc/apache2/: cue.conf
etc/cue/: cue.conf.sample  monitor.conf.sample  policy.json  worker.conf.sample
integration_test/: cue_test.py
integrationtests/: cue-integration.conf  run_tests.sh
integrationtests/common/: client.py
os_tasklib/: __init__.py
os_tasklib/cinder/: __init__.py  create_volume.py
os_tasklib/common/: __init__.py  assert_task.py  check_for.py  check_for_vm_status.py  lambda_task.py  map_task.py  reduce_task.py  verify_network_task.py
os_tasklib/neutron/: __init__.py  create_port.py  delete_port.py  delete_ports.py  show_network.py
os_tasklib/nova/: __init__.py  create_vm.py  create_vm_group.py  delete_vm.py  delete_vm_group.py  get_vm.py  get_vm_status.py  list_vm_interfaces.py
os_tasklib/swift/: __init__.py
rally-jobs/: cue-scenarios.yaml  rabbitmq-scenarios-gate.yaml  rabbitmq-scenarios.yaml
rally-jobs/plugins/: clusters.py  cue_utils.py
rally-scenarios/: cue-scenarios.yaml  run_rally_scenarios.sh
rally-scenarios/plugins/: __init__.py  clusters.py  cue_utils.py  list_clusters.py
releasenotes/source/: conf.py  index.rst
tests/: gate_hook.sh  post_test_hook.sh  pre_test_hook.sh
tests/common/: __init__.py  rabbitmq_test.py
tests/integration/: cue-integration.conf  run_tests.sh
tools/config/: check_uptodate.sh  config-generator-cue.conf  config-generator-monitor.conf  config-generator-worker.conf  generate_sample.sh  oslo.config.generator.rc
(+243 files in other folders)
