[metadata]
name = cue
version = 2015.1
summary = OpenStack Message Queuing System Provisioning
description-file =
    README.md
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    cue
    os_tasklib

[entry_points]
console_scripts =
    cue-api = cue.cmd.api:main
    cue-dbsync = cue.cmd.dbsync:main
    cue-manage = cue.cmd.manage:main
    cue-worker = cue.cmd.worker:main

cue.database.migration_backend =
    sqlalchemy = cue.db.sqlalchemy.migration

cue.manage =
    database = cue.manage.database:DatabaseCommands

[pbr]
autodoc_index_modules = True

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = cue/locale
domain = cue

[update_catalog]
domain = cue
output_dir = cue/locale
input_file = cue/locale/cue.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = cue/locale/cue.pot

[wheel]
universal = 1
