[metadata]
name = cue
version = 1.1.0 
summary = OpenStack Message Queuing System Provisioning
description-file =
    README.md
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    cue
    os_tasklib

[entry_points]
console_scripts =
    cue-api = cue.cmd.api:main
    cue-manage = cue.cmd.manage:main
    cue-worker = cue.cmd.worker:main
    cue-monitor = cue.cmd.monitor:main

cue.database.migration_backend =
    sqlalchemy = cue.db.sqlalchemy.migration

cue.manage =
    database = cue.manage.database:DatabaseCommands
    taskflow = cue.manage.taskflow:TaskFlowCommands
    broker = cue.manage.broker:BrokerCommands

oslo.config.opts =
    cue = cue:list_opts
    cue.api = cue.api:list_opts
    cue.api.app = cue.api.app:list_opts
    cue.cmd.worker = cue.cmd.worker:list_opts
    cue.common.service = cue.common.service:list_opts
    cue.monitor = cue.monitor:list_opts
    cue.taskflow = cue.taskflow:list_opts

[pbr]
autodoc_index_modules = True

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = cue/locale
domain = cue

[update_catalog]
domain = cue
output_dir = cue/locale
input_file = cue/locale/cue.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = cue/locale/cue.pot

[wheel]
universal = 1
